<resources>
    <string name="app_name">RainySeeds</string>
    <string name="btn_sendPassword">Send password</string>
    <string name="eT_Email">Email address</string>
    <string name="btnLogin">Log in</string>
    <string name="eT_Password">Password</string>
    <string name="eT_EmailRecovery">Email address</string>
    <string name="btnSendPassword">Send password</string>
    <string name="eT_EmailSignin">Email address</string>
    <string name="eT_PasswordSignin">Password</string>
    <string name="eT_ConfirmPassword">Confirm password</string>
    <string name="btnSignin">Sign in</string>
    <string name="tV_PasswordRecovery">Forgot password?</string>
    <string name="tV_Signup">New here? Sign up</string>
    <string name="ErrorLogin">Fill up all fields!</string>
    <string name="ExitLogin">Successfully logged in</string>
    <string name="ErrorPassword">Passwords do not match</string>
    <string name="ExitSignin">Successfully signed in</string>
    <string name="WrongEmail">Wrong email</string>
    <string name="ForgotPass">Reset password</string>
    <string name="Reset">Send password</string>
    <string name="Close">Close</string>
    <string name="EmailSent">Email sent</string>
    <string name="GoogleSigninError">Google sign in failed</string>
    <string name="_300ml" />
    <string name="_200ml" />
    <string name="_100ml" />
    <string name="_50ml" />
    <string name="Store">Store</string>
    <string name="Search">Search</string>
    <string name="scientificName">Scientific Name</string>
    <string name="plantName">Plant Name</string>
    <string name="Benefits">Benefits</string>
    <string name="Uses">Principal Uses</string>
    <string name="Warnings">Warnings</string>
    <string name="EnyclopediaFilterAll">All</string>
    <string name="EnyclopediaFilterBought">Bought</string>
    <string name="EnyclopediaFilterToBuy">To Buy</string>
    <string name="addWater1">100ml</string>
    <string name="addWater2">200ml</string>
    <string name="addWater3">500ml</string>
    <string name="addWater4">1000ml</string>
    <string name="Name">Name</string>
    <string name="Age">Age</string>
    <string name="Weight">Weight (kg)</string>
    <string name="Height">Height (cm)</string>
    <string name="Sex">Sex</string>
    <string name="Exercise">Hours of exercise (week)</string>
    <string name="BirthDate">Birth Date</string>
    <string name="ErrorPasswordLength">Password should be at least 6 characters</string>
    <string name="LoginError">Error email or password</string>
    <string name="IntroduceWater">Introduce water (ml)</string>
    <string name="Loading">Loading...</string>
    <string name="DevelopedBy">"Developed by\n\t\tSergi Fernández\n\t\tKatia Garcia\n\t\tRuben Pellicero\n\t\tRichard Sudario"</string>
    <string name="info1">Your ideal daily water consumption is based on your registration data, that can be modified at your profile.</string>
    <string name="info2">You will receive every day a message advising on water consumption depending on the weather of your location.</string>
    <string name="info3">All the plants alive in your greenhouse are generating money while time pass. Keep them alive drinking enough water to earn more money. But be careful if you drink too much!</string>
    <string name="info4">The more expensive is the plant the more money it generates and the more time they take to wither.</string>
    <string name="info5">When you bought a plant you unlock the information about it. If this plant dies, you will still have this information, but you won\'t get money from the plant. To do that you need to rebuy it.</string>


    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_true_weather">TrueWeatherActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>
