<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:paddingHorizontal="45dp"
    android:paddingVertical="35dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button"
                android:gravity="center"
                android:paddingHorizontal="10dp"
                android:paddingVertical="6dp"
                android:text="@string/info1"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15sp">

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/rounded_button"
                android:gravity="center"
                android:paddingHorizontal="10dp"
                android:paddingVertical="6dp"
                android:text="@string/info2"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15sp">

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/rounded_button"
                android:gravity="center"
                android:paddingHorizontal="10dp"
                android:paddingVertical="6dp"
                android:text="@string/info3"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15sp">

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/rounded_button"
                android:gravity="center"
                android:paddingHorizontal="10dp"
                android:paddingVertical="6dp"
                android:text="@string/info4"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15sp">

            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/rounded_button"
                android:gravity="center"
                android:paddingHorizontal="10dp"
                android:paddingVertical="6dp"
                android:text="@string/info5"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15sp">

            </TextView>
            <FrameLayout
                android:id="@+id/buttonOK"
                android:layout_width="60dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/water_btn_bckg">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:text="OK"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    >
                </TextView>
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:text="@string/DevelopedBy"
                android:textColor="@color/dark_gray"
                android:textSize="13sp">

            </TextView>
        </LinearLayout>


    </ScrollView>

</FrameLayout>