<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="@drawable/bckg_water_gradient"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_gravity="bottom"
        android:weightSum="5"

        >

    <EditText
            android:id="@+id/selectText"
            android:layout_width="320dp"
            android:layout_height="0dp"
            android:layout_gravity="start"
            android:layout_weight="1" />
    <Button
            android:background="@drawable/bckg_water_gradient"
            android:id="@+id/x50mlButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/_50ml"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:layout_gravity="start"
            android:textAlignment="viewStart"
            android:drawableRight="@drawable/icon_drop">
    </Button>
    <Button
            android:background="@drawable/bckg_water_gradient"
            android:id="@+id/x100mlButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/_100ml"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:layout_gravity="start"
            android:textAlignment="viewStart"
            android:drawableRight="@drawable/icon_glass_water">
    </Button>
    <Button
            android:background="@drawable/bckg_water_gradient"
            android:id="@+id/x200mlButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/_200ml"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:layout_gravity="start"
            android:textAlignment="viewStart"
            android:drawableRight="@drawable/icon_bottle">
    </Button>
    <Button
            android:background="@drawable/bckg_water_gradient"
            android:id="@+id/x300mlButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:layout_marginRight="5dp"
            android:text="@string/_300ml"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:layout_gravity="start"
            android:textAlignment="viewStart"
            android:drawableRight="@drawable/icon_regadera">
    </Button>



</LinearLayout>