<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bckg_login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/inputUsername"
                android:layout_width="250dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:background="@color/translucid_white"
                android:ems="10"
                android:hint="@string/Name"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray" />

            <EditText
                android:id="@+id/inputWeight"
                android:layout_width="250dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:background="@color/translucid_white"
                android:ems="10"
                android:hint="@string/Weight"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray" />

            <EditText
                android:id="@+id/inputHeight"
                android:layout_width="250dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:background="@color/translucid_white"
                android:ems="10"
                android:hint="@string/Height"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray" />

            <EditText
                android:id="@+id/inputHoursExercise"
                android:layout_width="250dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:background="@color/translucid_white"
                android:ems="10"
                android:hint="@string/Exercise"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray" />

            <FrameLayout
                android:layout_width="250dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:background="@color/translucid_white"
                android:ems="10">

                <RadioGroup
                    android:id="@+id/sexOption"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/maleOption"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:buttonTint="@color/gray"
                        android:text="Male"
                        android:textColor="@color/gray"
                        android:textSize="15sp" />
                    <RadioButton
                        android:id="@+id/femaleOption"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:buttonTint="@color/gray"
                        android:text="Female"
                        android:textColor="@color/gray"
                        android:textSize="15sp"
                        android:layout_marginHorizontal="5dp"/>
                    <RadioButton
                        android:id="@+id/otherOption"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:buttonTint="@color/gray"
                        android:text="Other"
                        android:textColor="@color/gray"
                        android:textSize="15sp" />

                </RadioGroup>

            </FrameLayout>

            <FrameLayout
                android:layout_width="250dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                >

                <EditText
                    android:id="@+id/inputBirthDate"
                    android:layout_width="250dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@color/translucid_white"
                    android:ems="10"
                    android:hint="@string/BirthDate"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray" />

            </FrameLayout>

            <Button
                android:id="@+id/btnSignin"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:text="@string/btnSignin" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>